@@ -24,6 +24,26 @@ java -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+UseFMA
 </details>
 
 <details>
+  <summary>Mukul1127 Flag Plus(GraalVM版本)(推荐)</summary>
+
+GraalVM Java 17+ 的参数,
+
+
+```shell
+java -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+UseFMA -XX:+UseVectorCmov -XX:+UseNewLongLShift -XX:+UseFastStosb -XX:+SegmentedCodeCache -XX:+OptimizeStringConcat -XX:+DoEscapeAnalysis -XX:+OmitStackTraceInFastThrow -XX:+AlwaysActAsServerClassMachine -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:AllocatePrefetchStyle=3 -XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority -XX:+EagerJVMCI -Dgraal.TuneInlinerExploration=1 -XX:+UseZGC -XX:AllocatePrefetchStyle=1 -XX:-ZProactive
+```
+
+如果你使用Java 21 以上,你可以将`-XX:-ZProactive`换`-XX:+ZGenerational`,Java 22以上必须切换
+
+### 以下是格外选项
+
+更激进的内联，在 Graal 中通过`-Dgraal.BaseTargetSpending=160`（默认为 120）和 OpenJDK 中的其他一些标志。具有较大缓存的 CPU 可能会从中受益。
+
+`-Dgraal.OptWriteMotion=true`和`-Dgraal.WriteableCodeCache=true`,它们看起来不稳定，但在 GraalVM 22.3.0+ 中可能更稳定
+
+</details>
+
+<details>
   <summary>Aikar's Flag Plus</summary>
 
 Aikar's Flag 是最通用的优化启动参数,Aikar's Flag Plus是在Aikar's Flag上进行了更好的优化
